# my_blinky_zephyr

./: .gitignore  CMakeLists.txt  Makefile  nrf9160_pca10090ns.overlay  prj.conf  readme.md
src/: main.c
src/accel/: CMakeLists.txt  accelerometer.c  accelerometer.h
src/sensors/: CMakeLists.txt  sensors_izo.c  sensors_izo.h
